# napari-oneat

./: README.md  setup.cfg  tox.ini
src/napari_oneat/: napari.yaml
src/napari_oneat/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
